--- a/6_custom-PCE_v1.Rmd
+++ b/6_custom-PCE_v1.Rmd
@@ -46,7 +46,7 @@ library(TissueEnrich)
 library(R.utils)
 ```
 
-## Download coutns file
+## Download counts file
 
 ```{r download, warnings=TRUE, message=FALSE}
 zplink <-
